<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"
           />
    </group>
    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_Menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_category" />
    </group>

    <group android:id="@+id/category_cart">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />
    </group>
    <group android:id="@+id/My_order">
        <item
            android:id="@+id/nav_Myorder"
            android:icon="@drawable/fui_ic_check_circle_black_128dp"
            android:title="@string/MyOrder" />
    </group>
    <group android:id="@+id/user_group">
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/sign_out" />
    </group>


    <group android:id="@+id/about_us">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />
    </group>



</menu>